// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListGroupItem /> renders properly with default props provided 1`] = `
<li
  className="list-group-item list-group-item-action list-group-item-secondary clickable p-2 p-sm-2 px-md-3 px-lg-4 text-center text-sm-left "
  key="1"
  onClick={[Function]}
  onKeyUp={[Function]}
  role="menuitem"
  tabIndex={2}
>
  test item
</li>
`;

exports[`<ListGroupItem /> renders within active class if current item is selected item 1`] = `
<li
  className="list-group-item list-group-item-action list-group-item-secondary clickable p-2 p-sm-2 px-md-3 px-lg-4 text-center text-sm-left active"
  key="1"
  onClick={[Function]}
  onKeyUp={[Function]}
  role="menuitem"
  tabIndex={2}
>
  test item
</li>
`;
